--- a/RegisterLoginApplication/Views/Register/Register.cshtml
+++ b/RegisterLoginApplication/Views/Register/Register.cshtml
@@ -1,145 +1,148 @@
-﻿@model RegisterLoginApplication.Models.Register
-
+@model RegisterLoginApplication.Models.Register
 @{
     /**/
-
     Layout = null;
 }
-
 <!DOCTYPE html>
-
+<html>
 <head>
-
+    <meta name="viewport" content="width=device-width" />
     <title>Register</title>
-
     <script src="~/Scripts/jquery-1.10.2.js"></script>
     <script type="text/javascript">
-        $(".test").show();
-        setTimeout(function () { $(".test").hide(); }, 4000);
+        $(".Register").show();
+        setTimeout(function () { $(".Register").hide(); }, 4000);
         function ResetValue() {
-
             $('.Reset').html("");
             $('.Reset').val("");
-
             return false;
         }
     </script>
+    <style>
+        .Lablestyle {
+            color: sienna;
+            font-family: Cambria;
+            font-size: 19px;
+            font-variant: small-caps;
+        }
 
+        .Validationstyle {
+            color: Red;
+            font-family: 'Times New Roman';
+            font-size: 17px;
+        }
+    </style>
 </head>
-
-<body style="background-color:deepskyblue;color:black">
-
-    <div class="container" align="center" style="background-color: cornsilk">
-        <br />
-        <h1 style="color:blueviolet">REGISTER</h1>
-        <p style="color: ActiveCaption"><b>Please Register here to Create an Account.</b></p>
-
+<body style="background-color:lightgreen;color:white">
+    <!-- Registration Form-->
+    <div class="container" align="center">
+        <h1 style="color:blueviolet;font-family:'Felix Titling';font-size:35px;font-variant: small-caps;font-weight:bolder;">Register</h1>
+        <p style="color: dodgerblue;box-shadow: 100px 300px 240px 30px activecaption; font-family:'Felix Titling';font-variant: small-caps;font-weight:bolder;font-size: 20px;">Please Register here to Create an Account</p>
         @using (Html.BeginForm("Register", "Register", FormMethod.Post, new { autocomplete = "off" }))
         {
+            @Html.AntiForgeryToken()
+            <p>
+                <a style="color:mediumvioletred;font-family:'Lucida Bright';font-size:15px;font-variant:small-caps">All the Fields are Mandatory*</a>
+            </p>
             <table>
                 <tr>
-                    <td style="color: sienna">FIRST NAME</td>
+                    <td class="Lablestyle">First Name*</td>
                     <td>@Html.TextBoxFor(model => model.FirstName, new { @class = "control-label col-md-2 Reset", required = "required" })</td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td style="color: red">@Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger Reset" })</td>
+                    <td class="Validationstyle">@Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger Reset" })</td>
                     <td> <br /></td>
                 </tr>
 
                 <tr>
-                    <td style="color: sienna">LAST NAME</td>
+                    <td class="Lablestyle">Last Name*</td>
                     <td>@Html.TextBoxFor(model => model.LastName, new { @class = "control-label col-md-2 Reset", required = "required" }) </td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td style="color: red">@Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger Reset" })</td>
+                    <td class="Validationstyle">@Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger Reset" })</td>
                     <td> <br /> </td>
                 </tr>
 
                 <tr>
-                    <td style="color: sienna">EMAIL ID </td>
-                    <td style="color:red">@Html.TextBoxFor(model => model.EmailId, String.Empty, new { @class = "control-label col-md-2 Reset", required = "required" })  @TempData["EmailError"]</td>
+                    <td class="Lablestyle">Email Id</td>
+                    <td style="color:red">@Html.TextBoxFor(model => model.EmailId, String.Empty, new { @class = "control-label col-md-2 Reset", required = "required" })  </td>
+                    <!-- Clearing EmailId Already Exist Message-->
+                    <td class="Validationstyle">
+                        <div class="Reset"> @ViewBag.Message</div>
+                    </td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td style="color: red">@Html.ValidationMessageFor(model => model.EmailId, "", new { @class = "text-danger Reset" }) </td>
+                    <td class="Validationstyle">@Html.ValidationMessageFor(model => model.EmailId, "", new { @class = "text-danger Reset" }) </td>
                     <td> <br /></td>
                 </tr>
 
                 <tr>
-                    <td style="color: sienna">MOBILE NUMBER</td>
+                    <td class="Lablestyle">Mobile Number*</td>
                     @*<td style="color:red">@Html.TextBoxFor(model => model.MobileNumber, new { @class = "control-label col-md-2 Reset", required = "required", type = "number" })</td>*@
                     <td>
                         @Html.TextBoxFor(Model => Model.MobileNumber, new { @maxlength = "10", @class = "control-label col-md-2 Reset", required = "required" })
                     </td>
-            </tr>
-            <tr>
-                <td></td>
-                <td style="color: red">@Html.ValidationMessageFor(model => model.MobileNumber, "", new { @class = "text-danger Reset" })</td>
-                <td> <br /> </td>
-            </tr>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td class="Validationstyle">@Html.ValidationMessageFor(model => model.MobileNumber, "", new { @class = "text-danger Reset" })</td>
+                    <td> <br /> </td>
+                </tr>
 
-            <tr>
-                <td style="color: sienna">ROLE</td>
-                <td>@Html.TextBoxFor(model => model.Role, new { @class = "control-label col-md-2 Reset", required = "required" })</td>
-            </tr>
-            <tr>
-                <td></td>
-                <td style="color: red">@Html.ValidationMessageFor(model => model.Role, "", new { @class = "text-danger Reset" })</td>
-                <td> <br /> </td>
-            </tr>
+                <tr>
+                    <td class="Lablestyle">Role*</td>
+                    <td>@Html.TextBoxFor(model => model.Role, new { @class = "control-label col-md-2 Reset", required = "required" })</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td class="Validationstyle">@Html.ValidationMessageFor(model => model.Role, "", new { @class = "text-danger Reset" })</td>
+                    <td> <br /> </td>
+                </tr>
 
-            <tr>
-                <td style="color: sienna">PASSWORD</td>
-                <td>@Html.EditorFor(model => model.Password, new { @class = "control-label col-md-2 Reset", required = "required" })</td>
-            </tr>
-            <tr>
-                <td></td>
-                <td style="color: red">@Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger Reset" })</td>
-                <td> <br /> </td>
-            </tr>
+                <tr>
+                    <td class="Lablestyle">Password*</td>
+                    <td>@Html.PasswordFor(model => model.Password, new { @class = "control-label col-md-2 Reset", required = "required" })</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td class="Validationstyle">@Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger Reset" })</td>
+                    <td> <br /> </td>
+                </tr>
 
-            <tr>
-                <td style="color: sienna">CONFIRM PASSWORD</td>
-                <td>@Html.EditorFor(model => model.ConfirmPassword, new { @class = "control-label col-md-2 Reset", required = "required" })</td>
-            </tr>
-            <tr>
-                <td></td>
-                <td style="color: red">@Html.ValidationMessageFor(model => model.ConfirmPassword, "", new { @class = "text-danger Reset" })</td>
-                <td> <br /> </td>
-            </tr>
-
-            <tr>
-                <td> <br /> </td>
-            </tr>
-
-            @Html.AntiForgeryToken()
-
-        </table>
-
-        <input id="Submit1" type="submit" name="submit" value="Register" style="background-color: royalblue;color:white" />
-        <input id="Reset1" type="button" value="Reset" onclick="ResetValue()" style="background-color: royalblue;color:white" />
-
-    }
-
+                <tr>
+                    <td class="Lablestyle">Confirm Password*</td>
+                    <td>@Html.PasswordFor(model => model.ConfirmPassword, new { @class = "control-label col-md-2 Reset", required = "required" })</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td class="Validationstyle">@Html.ValidationMessageFor(model => model.ConfirmPassword, "", new { @class = "text-danger Reset" })</td>
+                    <td> <br /> </td>
+                </tr>
+                <tr>
+                    <td> <br /> </td>
+                </tr>
+            </table>
+            <input id="Submit" type="submit" name="submit" value="Register" style="background-color: royalblue;color:white" />
+            <input id="Reset" type="button" value="Reset" onclick="ResetValue()" style="background-color: royalblue;color:white" />
+        }
+        <!-- Registration Success Message-->
         @if (TempData["UserMessage"] != null)
         {
-
-            <div class="test">
+            <div class="Register">
                 <p style="color:green; font-size:150%; font-family:'Times New Roman';">@TempData["UserMessage"] </p>
             </div>
-
         }
-
-        <div class="container signin">
-            <p>Already Have an Account? @Html.ActionLink("Login", "Login", "Login") </p>
+        <!-- Login Page Redirection-->
+        <div class="container signin" align="center">
+            <p style="color:dodgerblue">Already Have an Account? @Html.ActionLink("Login", "Login", "Login") </p>
             <br />
             <br /> <br />
         </div>
-
     </div>
-
 </body>
+</html>
 
 
