--- a/RegisterLoginApplication/Views/Register/Register.cshtml
+++ b/RegisterLoginApplication/Views/Register/Register.cshtml
@@ -66,7 +66,7 @@
                 </tr>
 
                 <tr>
-                    <td class="Lablestyle">Email Id</td>
+                    <td class="Lablestyle">Email Id*</td>
                     <td style="color:red">@Html.TextBoxFor(model => model.EmailId, String.Empty, new { @class = "control-label col-md-2 Reset", required = "required" })  </td>
                     <!-- Clearing EmailId Already Exist Message-->
                     <td class="Validationstyle">
